Fixed #15 - title z-index blocking buttons

--- a/scss/ionic/structure/_bar.scss
+++ b/scss/ionic/structure/_bar.scss
@@ -53,6 +53,9 @@
     line-height: $bar-button-line-height;
     font-size: 12px;
     padding: 4px 12px;
+
+    // Rise the button above the title
+    z-index: 1;
   }
 
   .button-bar {
